fix db error